# Chameleon

./: .gitignore  README.md  README.zh-CN.md  edgeLLM.code-workspace  pyproject.toml
chameleon/: __init__.py  api.py  cli.py  launcher.py
chameleon/architectures/: __init__.py  base.py  cosmos3.py  pi05.py  qwen3_asr.py  registry.py
chameleon/commands/: __init__.py  bench.py  common.py  compile.py  draw.py  eval.py  export.py  infer.py  info.py  profile.py  quantize.py  stats.py  stream.py  trt_profile.py  webui.py  workflow.py
chameleon/compile/: __init__.py  base.py  stubs.py  tvm_mlc_vla.py
chameleon/config/: __init__.py  schema.py
chameleon/core/: __init__.py  artifact.py  context.py  platform.py  registry.py
chameleon/dataloader/: __init__.py  asr_audio.py  base.py  cosmos3_droid.py  lerobot.py
chameleon/deploy/: __init__.py  backends.py  build_cfg.py  cosmos3_diffusers.py  paths.py  pi05_openpi.py  qwen3_asr_edgellm.py  registry.py  trt_build.py  trt_profile.py
chameleon/draw/: trt_profile_viewer.py
chameleon/evaluate/: __init__.py  asr_eval.py  asr_runner_base.py  chameleon_runner.py  compare.py  cosmos3_pt_trt_compare_runner.py  cosmos3_runner.py  cosmos3_trt_runner.py  lerobot_eval.py  meta.py  metrics.py  noise.py  norm_stats.py  openpi_session.py  openpi_transforms.py  policy.py  pt_trt_compare_runner.py  pt_tvm_compare_runner.py  qwen3_asr_edgellm_runner.py  runner_base.py  running_stats.py  task_utils.py  text_norm.py  trt_eval_utils.py  trt_only_runner.py  tvm_only_runner.py
chameleon/frontend/: __init__.py  base.py  onnx_export.py
chameleon/kernels/: __init__.py  base.py
chameleon/models/: __init__.py  base.py
chameleon/profile/: __init__.py  bench.py  compute_stats.py  cosmos3_real_stats.py  counters.py  execution_plan.py  latency.py  reference_stats.py  shape_resolver.py  stage_timer.py  units.py
chameleon/quantization/: __init__.py  base.py  registry.py
chameleon/runtime/: __init__.py  base.py  orchestrator.py
chameleon/webui/: __init__.py  config_store.py  runner.py  server.py
chameleon/workflows/: __init__.py  actions.py  runner.py
configs/: cosmos3_action_realweights.yaml  cosmos3_nano_action_trt_deploy.yaml  cosmos3_policy_droid_trt_deploy.yaml  cosmos3_policy_droid_trt_eval.yaml  cosmos3_stats.yaml  cosmos3_stats_thor.yaml  cosmos3_trt_deploy.yaml  cosmos3_video_realweights.yaml  pi05_libero_eval.yaml  pi05_libero_trt_compare.yaml  pi05_libero_trt_deploy.yaml  pi05_libero_trt_eval.yaml  pi05_libero_tvm_compare.yaml  pi05_libero_tvm_eval.yaml  pi05_realweights.yaml  pi05_rtx4070_realweights.yaml  qwen3_asr_trt_deploy.yaml  qwen3_asr_trt_eval.yaml  qwen3_asr_trt_quantize.yaml
configs/build_configs/: cosmos3_dit_build_cfg.py  cosmos3_nano_action_dit_step_build_cfg.py  cosmos3_nano_action_text_embed_build_cfg.py  cosmos3_nano_action_vae_decode_build_cfg.py  cosmos3_nano_action_vae_encode_build_cfg.py  llm_build_cfg.py  (+11 more)
docs/: all_q&a.md  arch.md  edge_infer_arch.md  pi05_allspark_p1_integration.md
scripts/: profile_pi05_trt_tvm.sh  tvm_env.sh  tvm_nsys.sh  tvm_thor.sh
tests/: conftest.py
(+199 files in other folders)
