[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chameleon-vla"
version = "0.1.0"
description = "Cross-platform edge VLA model quantization, compilation, inference and custom-operator framework."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Platform toolchains are optional; install what your target needs.
nvidia = ["tensorrt", "nvidia-modelopt"]
onnx = ["onnx", "onnxruntime"]
intel = ["openvino", "nncf"]
tvm = ["apache-tvm"]

[project.scripts]
chameleon = "chameleon.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chameleon*"]

[tool.ruff]
line-length = 100
target-version = "py310"
