[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chameleon-vla"
version = "0.1.0"
description = "Cross-platform edge VLA model quantization, compilation, inference and custom-operator framework."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    # ONNX export (frontend) + TRT build preflight (deploy/trt_build.py)
    "onnx>=1.16.0",
]

[project.optional-dependencies]
# Pi05 ONNX export + TensorRT engine build (configs/pi05_libero_trt_deploy.yaml).
# Requires NVIDIA CUDA driver/toolkit on the build machine; install into your openpi venv, e.g.:
#   pip install -e ".[deploy]"
deploy = [
    "tensorrt>=10.0.0",
    "onnxruntime>=1.17",
    "transformers>=4.40",
    "safetensors>=0.4",
]
# Platform toolchains — install what your target needs.
nvidia = [
    "tensorrt>=10.0.0",
    "nvidia-modelopt",
    "onnxruntime>=1.17",
]
onnx = [
    "onnxruntime>=1.17",
]
intel = ["openvino", "nncf"]
tvm = ["apache-tvm"]
# Cosmos3 omni world-foundation model (diffusers generator + Wan VAE + reasoner).
# Real-weight video / action generation path; reference path needs none of these.
#   pip install -e ".[cosmos3]"
cosmos3 = [
    "diffusers>=0.32",
    "transformers>=4.40",
    "accelerate>=0.30",
    "safetensors>=0.4",
]
eval-ui = ["websockets>=12", "opencv-python-headless>=4.8"]
# Browser config WebUI (chameleon webui): pick/edit/validate task YAMLs.
#   pip install -e ".[webui]"
webui = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
chameleon = "chameleon.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chameleon*"]

[tool.setuptools.package-data]
"chameleon.webui" = ["client/*.html", "client/*.css", "client/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests",
    "e2e_slow: slow e2e (real infer on reference model)",
    "e2e_gpu: requires GPU and openpi weights",
]

[tool.ruff]
line-length = 100
target-version = "py310"
